# finBoss

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_config.py
api/: config.py  dependencies.py  error_codes.py  exceptions.py  logging.py  main.py
api/middleware/: __init__.py  auth.py  rate_limit.py  tracing.py
api/routes/: ai.py  alerts.py  ap.py  ar.py  attribution.py  customer360.py  feishu.py  health.py  knowledge.py  quality.py  query.py  reports.py  salesperson_mapping.py
api/schemas/: alert.py  ap.py  ar.py  customer360.py  quality.py  query.py  salesperson_mapping.py
cli/: __init__.py  __main__.py  data.py  init.py  pipeline.py  root.py  service.py
config/: docker-compose.yml
config/dbt/: profiles.yml
config/flink/: flink-conf.yaml  job.yaml
connectors/bank/: __init__.py
connectors/common/: __init__.py  base.py
connectors/customer/: __init__.py  base.py  kingdee.py
connectors/kingdee/: __init__.py  client.py  jdbc.py  models.py
docs/: TEST_REPORT.md  TEST_REPORT_PHASE2.md
finboss_mcp/: __init__.py  server.py
pipelines/ingestion/: __init__.py  kingdee_ar.py
pipelines/marts/: __init__.py  ar_aggregations.py  dm_ar.py
pipelines/processing/: __init__.py  quality.py  std_ar.py
schemas/: alert.py  ap.py  attribution.py  customer360.py  quality.py
schemas/dm/: __init__.py  ar.py  dm_ar_summary.sql  dm_customer_ar.sql
schemas/raw/: __init__.py  kingdee.py
schemas/std/: __init__.py  ar.py  (+2 more)
scripts/: customer360_ddl.sql  ingest_financial_knowledge.py  init_customer360.py  init_dbt.sh  init_phase5.py  init_phase6.py  init_phase7a.py  init_phase7b.py  init_phase7c.py  phase5_ddl.sql  phase6_ddl.sql  phase7a_ddl.sql  phase7b_ddl.sql  phase7c_ddl.sql  quality_check.py  seed_test_data.py  setup.sh  simple_seed_data.py  test_phase2_ai.py
services/: __init__.py  ai_analysis_service.py  alert_service.py  ap_bank_parser.py  ap_service.py  ar_service.py  clickhouse_service.py  customer360_service.py  customer_matcher.py  customer_standardizer.py  dashboard_service.py  data_service.py  field_quality_service.py  knowledge_manager.py  per_salesperson_report_service.py  quality_alert_service.py  quality_service.py  report_service.py  salesperson_mapping_service.py  scheduler_service.py  validators.py
tests/: conftest.py
(+104 files in other folders)
