[project]
name = "finboss"
version = "0.1.0"
description = "FinBoss - 企业财务AI信息化系统"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "FinBoss Team" }
]
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "pymssql>=2.2.0",
    "clickhouse-driver>=0.2.6",
    # Data Processing
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    # Iceberg
    "pyiceberg>=0.5.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    # Code Quality
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    # Utilities
    "python-dateutil>=2.8.2",
    "structlog>=24.1.0",
    # AI / LLM / RAG
    "httpx>=0.26.0",
    "pymilvus>=2.3.4",
    "sentence-transformers>=2.2.2",
    "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "black>=24.1.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "connectors", "services", "pipelines"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=. --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
